# Game-Controller-MIDI

./: .gitignore  .gitmodules  AGENTS.MD  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  structure.md  vcpkg.json
.github/workflows/: macos-build.yml  windows-msvc.yml
.opencode/plans/: flexible_mapper_implementation.md  flexiblemapper_improvements.md  multi_shift_key_support.md
cmake/: EmbedPresets.cmake  bin2c.cmake
docs/: architecture.md  build.md  configuration.md  extension-guide.md
plans/: mapping_proposal.md
presets/: c_major_chords.json  c_major_scale_chords.json
src/: DistrhoPluginInfo.h  Plugin.cpp  Plugin.hpp  UI.cpp
src/Common/: MidiTypes.hpp  SharedState.hpp
src/Core/: EventDispatcher.cpp  EventDispatcher.hpp  IControllerEventHandler.hpp  MidiEventQueue.cpp  MidiEventQueue.hpp  SdlManager.cpp  SdlManager.hpp
src/Logic/: FlexibleMapper.cpp  FlexibleMapper.hpp  IMidiMapper.hpp  MajorScaleMapper.cpp  MajorScaleMapper.hpp  MapperConfig.hpp  MapperSerialization.cpp
tests/: core_tests.cpp
